fix: 空指针异常 & Java21的URL构造问题